login_main_activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
-    <string name="app_name">WeiShop</string>
+    <string name="app_name">aWeiShop</string>
     <string name="sign_up">注册</string>
     <string name="log_in">登录</string>
     <string name="wechat_login">微信登录</string>
-
 
     <string name="img1_title">5000万卖家</string>
     <string name="img1_sum">5千万卖家的共同选择</string>
@@ -11,4 +10,10 @@
     <string name="img2_sum">点微信头像，逛我的微店</string>
     <string name="img3_title">免费开店</string>
     <string name="img3_sum">费用全免，58秒闪电开店</string>
+
+    <string name="local_title">+86</string>
+    <string name="phone_hint">填写手机号</string>
+    <string name="password_hint">6–16位登录密码</string>
+    <string name="phone_number">手机号</string>
+    <string name="password">密码</string>
 </resources>
