--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="forgot">忘记密码</string>
 
     <string name="choose_country">选择国家和地区</string>
+    <string name="next_step">下一步</string>
+
+    <string name="already_agree">已阅读并同意</string>
+    <string name="service_xieyi">《微店平台服务协议》</string>
+    <string name="manager_guifan">《微店禁售商品管理规范》</string>
+    <string name="and">和</string>
 </resources>
