--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">aWeiShop</string>
+    <string name="app_name">微店-</string>
     <string name="sign_up">注册</string>
     <string name="log_in">登录</string>
     <string name="wechat_login">微信登录</string>
