--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,6 @@
     <string name="Join_weishop">加盟微店</string>
     <string name="Moving_assistant_weishop">搬家助手 一 微店</string>
 
+    <string name="Add_new_note">添加新笔记</string>
+
 </resources>
